--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head><title></title></head>
+<head><title>Es mi primera página web</title></head>
 <body><p>Hola Ale</p></body>
 </html>
