feat: add title

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <head><title>Es mi primera página web</title></head>
-<body><p>Hola Ale</p></body>
+<body><p>Hola Ale 2</p></body>
 </html>
